--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.16.2",
-    "vue": "^2.6.14"
+    "node-sass": "^6.0.1",
+    "sass-loader": "^10",
+    "vue": "^2.6.14",
+    "vue-tabulator": "^1.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.13",
